parser/parser_tests/tests_input/unit/good/Good66.ty
singleton class Utils {
    
    functions: {
        convert: (x: Int) -> Int = {
            if (x > 10) then {
                3
            } elif (x > 8) then {
                7
            } else {
                9
            }
        }
    }
}
