parser/parser_tests/tests_input/unit/bad/Bad60.ty
singleton class Utils {
    
    functions: {
        convert: (x: Int) -> Int = {
            if (x > 10) then {
                3
            } else if (x > 6) then {
                2
            } else if (x > 2) then {
                1
            } else {
                0
            }
        }
    }
}
